--- a/index.html
+++ b/index.html
@@ -1,33 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>¿Cómo crear una función en MATLAB?</h1>
-<h2>Sintaxis</h2>
-<p><strong>function [y1,...,yN] = myfun(x1,...,xM)</strong></p>
-<h2>Descripción</h2>
-<p><strong>function [y1,...,yN] = myfun(x1,...,xM)</strong> declara una función llamada myfun que acepta entradas x1,...,xM y devuelve salidas y1,...,yN. Esta instrucción de declaración debe ser la primera línea ejecutable de la función. Los nombres de función válidos comienzan con un carácter alfabético y pueden contener letras, números o guiones bajos.</p>
-<p>Puede guardar la función:</p>
-<ul>
-    <li>En un archivo de función que solo contenga definiciones de funciones. El nombre del archivo debe coincidir con el nombre de la primera función del archivo.</li>
-    <li>En un archivo de script que contenga comandos y definiciones de funciones. Las funciones deben estar al final del archivo. Los archivos de script no pueden tener el mismo nombre que una función del archivo. Las funciones son compatibles con los scripts a partir de la versión R2016b.</li>
-</ul>
-<p>Los archivos pueden incluir varias funciones locales o funciones anidadas. Para facilitar la lectura, utilice la palabra clave end para indicar el final de cada función en un archivo. La palabra clave end es obligatoria cuando:</p>
-<ul>
-    <li>Una función del archivo contiene una función anidada.</li>
-    <li>La función es una función local dentro de un archivo de función, y cualquier función local del archivo utiliza la palabra clave <i>end</i>.</li>
-    <li>La función es una función local dentro de un archivo de script.</li>
-</ul>
-<h2>Ejemplos</h2>
-<h3>Función con una salida</h3>
-<p>Defina una función en un archivo llamado calculateAverage.m que acepte un vector de entrada, calcule la media de los valores y devuelva un único resultado.</p>
-```matlab
-function ave = calculateAverage(x)
-    ave = sum(x(:))/numel(x); 
-end
+    <h1>Clase 00. Introducción al curso</h1>
+    <h2>Filosofía</h2>
+    <p>Conformarnos como un grupo de estudio <strong>solidario</strong> con buena comunicación y responsabilidad para un
+        aprendizaje efectivo.</p>
+    <h2>Competencias a desarrollar</h2>
+    <ul>
+        <li><strong>Juicio analítico:</strong> valora situaciones, distingue y separa sus
+            partes para explicar sus principios constitutivos y prever
+            consecuencias futuras.</li>
+        <li><strong>Planificación:</strong> establece objetivos, tiempos de actividades,
+            recursos y prioridades, así como los procedimientos para su
+            seguimiento y evaluación.</li>
+        <li><strong>Sentido ético:</strong> actúa responsablemente, con base en principios
+            axiológicos universales, respetando contextos culturales.</li>
+        <li><strong>Comunicación argumentada:</strong> transfiere información, ideas,
+            criterios y opiniones, de forma clara y convincente, siendo
+            receptivo hacia los demás; emitir juicios de valor fundamentados y
+            contrastados.</li>
+        <li><strong>Negociación y participación:</strong> expresa claramente sus
+            criterios, es capaz de escuchar a los otros y construir
+            nuevos escenarios para el diálogo y la interacción.</li>
+        <li><strong>Pensamiento crítico:</strong> revisa sus actuaciones y las de
+            otras personas que generen propuestas y decisiones en
+            el marco de su desempeño.</li>
+        <li><strong>Toma de decisiones:</strong> actúa oportuna, eficaz y
+            proactivamente ante diversas situaciones,
+            analizando las consecuencias.</li>
+        <li><strong>Trabajo en equipo</strong> se compromete con objetivos compartidos y
+            tareas comunes, armonizando diversos intereses que mejoren la
+            organización.</li>
+        <li><strong>Resolución de problemas</strong> (oportunidad de innovacion - TRIZ)
+            selecciona, adquiere, asimila, ordena y aplica conocimientos
+            ante dificultades específicas y generales, valorando los posibles
+            riesgos.</li>
+        <li><strong>Adaptación al cambio</strong> actúa ante las necesidades,
+            contingencias y transformaciones del entorno, percibiéndolas
+            como oportunidades de mejora.</li>
+    </ul>
+    <h2>Objetivo</h2>
+    <p>Proporcionar bases para formar en el
+        estudiante la disciplina requerida para afrontar
+        las <strong>soluciones de problemas en forma
+            algorítmica</strong> y darle los conocimientos
+        necesarios para <strong>utilizar el computador
+            mediante un lenguaje de programación,</strong> utilizar el computador
+        mediante un lenguaje de programación,
+        como herramienta de trabajo en su vida
+        académica y profesional.</p>
+    <h2>Contenido</h2>
+    <ol>
+        <li>Conocimiento del computador</li>
+        <li>Pasos para la solución de un problema a través del computador</li>
+        <li>Diagramas de flujo – Seudocódigo</li>
+        <li>Programación Estructurada</li>
+        <li>Subprogramas - funciones</li>
+        <li>Programación Orientada a Objetos</li>
+        <li>Lenguaje de Programación (Matlab - Python)</li>
+    </ol>
+    <h2>Programas - Software</h2>
+    <a href="https://www.python.org/" target="_blank">https://www.python.org/</a>
+    <img src="https://github.com/Ingenieria-Electrica-UdeA/banco_imagenes/raw/main/presentaciones/sitio-oficial-python-1.png" alt="Sitio oficial de Python" style="width: 100%; height: auto;">
+    <a href="http://www.mathworks.com" target="_blank">http://www.mathworks.com</a>
+    <img src="https://github.com/Ingenieria-Electrica-UdeA/banco_imagenes/raw/main/presentaciones/sitio-oficial-matlab.png" alt="Sitio oficial de MATLAB" style="width: 100%; height: auto;">
+
+<h2>Python</h2>
+<a href="https://www.python.org/" target="_blank">https://www.python.org/</a>
+<img src="https://github.com/Ingenieria-Electrica-UdeA/banco_imagenes/raw/main/presentaciones/sitio-oficial-python-2.png" alt="Sitio oficial de Python" style="width: 100%; height: auto;">
+<a href="https://www.lfd.uci.edu/~gohlke/pythonlibs/" target="_blank">https://www.lfd.uci.edu/~gohlke/pythonlibs/</a>
+<img src="https://github.com/Ingenieria-Electrica-UdeA/banco_imagenes/raw/main/presentaciones/librerias-python.png" alt="Librerías de Python" style="width: 100%; height: auto;">
+<img src="https://github.com/Ingenieria-Electrica-UdeA/banco_imagenes/raw/main/presentaciones/sitio-oficia-anaconda.png" alt="Sitio oficial de Anaconda" style="width: 100%; height: auto;">
+<img src="https://github.com/Ingenieria-Electrica-UdeA/banco_imagenes/raw/main/presentaciones/aplicaciones-anaconda.png" alt="Aplicaciones de Anaconda" style="width: 100%; height: auto;">
+<img src="https://github.com/Ingenieria-Electrica-UdeA/banco_imagenes/raw/main/presentaciones/ide-spyder-1.png" alt="IDE de Spyder" style="width: 100%; height: auto;">
+
+<h2>CO: Colaboratory</h2>
 </body>
+
 </html>
